--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,9 @@ testpaths = ["tests/**/*.py"]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.metadata]
+allow-direct-references = true
+
 [tool.hatch.build.targets.wheel]
 packages = ["src/inspect_modal_sandbox"]
 
